--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:10-alpine AS alpine
-WORKDIR /app
+
+WORKDIR /app/client
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 COPY package*.json .
 ## install only the packages defined in the package-lock.json (faster than the normal npm install)
