--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.11",
     "@nestjs/typeorm": "^7.1.0",
     "class-validator": "^0.12.2",
+    "dotenv": "^8.2.0",
     "pg": "^8.2.1",
     "postgres": "^1.0.2",
     "reflect-metadata": "^0.1.13",
