Remove useless files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,39 @@ node_modules/
 build/
 tmp/
 temp/
+
+# compiled output
+/server/dist
+/server/node_modules
+
+# Logs
+/server/logs
+/server/*.log
+/server/npm-debug.log*
+/server/yarn-debug.log*
+/server/yarn-error.log*
+/server/lerna-debug.log*
+
+# OS
+/server/.DS_Store
+/server/.env
+
+# Tests
+/server/coverage
+/server/.nyc_output
+
+# IDEs and editors
+/server/.idea
+/server/.project
+/server/.classpath
+/server/.c9/
+/server/*.launch
+/server/.settings/
+/server/*.sublime-workspace
+
+# IDE - VSCode
+/server/.vscode/*
+/server/!.vscode/settings.json
+/server/!.vscode/tasks.json
+/server/!.vscode/launch.json
+/server/!.vscode/extensions.json
